[package]
name = "blogy"
version = "0.1.0"
authors = ["Abdallah Ali <amaali1991@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ui"
path = "src/lib/mod.rs"
# crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", tag = "v0.7.0-rc.1", features = ["router"] }
gloo-storage = "0.3.0"
gloo-timers = {version = "0.3.0", features = [ "futures" ]}
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_json_path = "0.7.2"
pulldown-cmark = "0.13.0"
syntect = {version = "5.2.0", default-features = false, features = [ "default-fancy" ]}
chrono = { version = "0.4.41", features = ["serde"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
